# FURIguide_ws

./: .gitmodules  README.md
src/arduino_inner_loop/: arduino_inner_loop.ino
src/furiguide_2dnav/: CMakeLists.txt  package.xml
src/furiguide_2dnav/launch/: move_base.launch
src/furiguide_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/furiguide_control/: CMakeLists.txt  package.xml
src/furiguide_control/src/: furiguide_nav_node.cpp  furiguide_nav_node.h
src/furiguide_description/: CMakeLists.txt  package.xml
src/furiguide_description/furiguide_model/: model.config  model.sdf
src/furiguide_description/urdf/: furiguide.xacro  materials.xacro
src/furiguide_gazebo/: CMakeLists.txt  README.md  make_tag_model.sh  package.xml
src/furiguide_gazebo/buildings/testbuilding/: model.config  model.sdf
src/furiguide_gazebo/launch/: furiguide_gazebo.launch
src/furiguide_gazebo/models/Tag0/: model.config  model.sdf
src/furiguide_gazebo/models/Tag0/materials/scripts/: Tag0.material
src/furiguide_gazebo/worlds/: furiguide.world
src/furiguide_proto/: CMakeLists.txt  furiguide_rviz.rviz  package.xml
src/furiguide_proto/launch/: apriltags_detect.launch  furiguide_hw_loop.launch  furiguide_test.launch
